munin-cgi-graph: ignore @ARGV to fix CVE-2012-3513 and Debian #684076, thanks to Helmut Grohne <helmut@subdivi.de> for the work

--- a/master/_bin/munin-cgi-graph.in
+++ b/master/_bin/munin-cgi-graph.in
@@ -56,7 +56,7 @@ my %period  = ( "day"   => 300,
 my $logfile;
 my $scale = "day";
 
-my @params = @ARGV;
+my @params ;
 
 push @params, "--no-fork"; # FastCgi forks for us
 push @params, "--skip-locking", "--skip-stats", "--nolazy";
