node: more secure state file handling
Currently, plugins which run as root mix their state files in the same
directory as non-root plugins. The state directory is owned by munin:munin and
is group-writable. Because of these facts, it is possible for an attacker who
operates as user munin to cause a root-run plugin to run arbitrary code as
root.

This commit introduces :
- a new plugin state directory root, owned by uid 0
- each plugin runs in its own UID plugin state directory, owned by the said UID.

Closes: #1234, D#679897, R#849830, CVE-2012-3512

--- a/Makefile.config
+++ b/Makefile.config
@@ -41,8 +41,11 @@ LIBDIR     = $(PREFIX)/lib
 HTMLDIR    = $(PREFIX)/www/docs
 CGIDIR     = $(PREFIX)/www/cgi
 
-# Where to put RRD files and other internal data, both master and node
+# Where to put internal data for master (RRD, internal files, ...)
 DBDIR      = $(DESTDIR)/var/opt/munin
+
+# Where to put internal data for node (plugin state, ...)
+DBDIRNODE  = $(DESTDIR)/var/opt/munin-node
 
 # Client only - Where the spool files are written. Must be writable by
 # group "munin", and should be preserved between reboots
@@ -50,7 +53,7 @@ SPOOLDIR   = $(DBDIR)/spool
 
 # Client only - Where plugins should put their states. Must be writable by
 # group "munin", and should be preserved between reboots
-PLUGSTATE  = $(DBDIR)/plugin-state
+PLUGSTATE  = $(DBDIRNODE)/plugin-state
 
 # Where Munin should place its logs.
 LOGDIR     = $(PREFIX)/log/munin
