plugins: use runtime $ENV{MUNIN_PLUGSTATE}
Since 780634c4a48fc57b6631d644fca3649f1417d211, the plugin state dir get
resolved at runtime for security issues. The old behavior was using a
compile-time resolution.

--- a/plugins/node.d.linux/apt_all.in
+++ b/plugins/node.d.linux/apt_all.in
@@ -52,7 +52,7 @@ use strict;
 $ENV{'LANG'}="C";
 $ENV{'LC_ALL'}="C";
 
-my $statefile = "@@PLUGSTATE@@/plugin-apt.state";
+my $statefile = "$ENV{MUNIN_PLUGSTATE}/plugin-apt.state";
 my @releases = ("stable", "testing","unstable");
 
 
