--- a/plugins/node.d/bind9.in
+++ b/plugins/node.d/bind9.in
@@ -51,10 +51,9 @@ GPLv2
 =cut
 
 use strict;
-use Munin::Common::Defaults;
 
 my $QUERYLOG = $ENV{logfile} || '/var/log/bind9/query.log';
-my $STATEFILE= $Munin::Common::Defaults::MUNIN_PLUGSTATE.'/bind9.state';
+my $STATEFILE= "$ENV{MUNIN_PLUGSTATE}/bind9.state";
 
 my $OTHER=0;
 my %IN;
