--- a/plugins/node.d/ipmi_sensor_.in
+++ b/plugins/node.d/ipmi_sensor_.in
@@ -70,7 +70,7 @@ from time import time
 import sys
 import re
 
-CACHEDIR = "@@PLUGSTATE@@"
+CACHEDIR = os.environ['MUNIN_PLUGSTATE']
 CACHEFILE = "plugin-ipmi_sensor.cache"
 CACHEAGE = 120
 CONFIG = '@@CONFDIR@@/ipmi'
