--- a/plugins/node.d/mysql_isam_space_.in
+++ b/plugins/node.d/mysql_isam_space_.in
@@ -21,7 +21,7 @@ if you need to override the defaults below:
 
  [mysql_isam_space_*]
   env.mysqlopts
-  env.statefile @@PLUGSTATE@@/plugin-mysql_isam_space.state
+  env.statefile $ENV{MUNIN_PLUGSTATE}/plugin-mysql_isam_space.state
   env.ignore
   env.absolute 0
 
@@ -50,7 +50,7 @@ munin-node.
 
 my $DB = `basename $0 | sed 's/^mysql_isam_space_//g' | tr '_' '-'` ;
 chomp $DB;
-my $STATEFILE = $ENV{'statefile'} || "@@PLUGSTATE@@/plugin-mysql_isam_space.state";
+my $STATEFILE = $ENV{'statefile'} || "$ENV{MUNIN_PLUGSTATE}/plugin-mysql_isam_space.state";
 my $MYSQLSHOW = $ENV{'mysqlshow'} || `which mysqlshow`;
 my $ABSOLUTE  = $ENV{'absolute'} || 0;
 my @mysql_opts = ();
