--- a/plugins/node.d/smart_.in
+++ b/plugins/node.d/smart_.in
@@ -91,13 +91,12 @@
 verbose=False
 # Suppress SMART warnings (True/False)
 report_warnings=True
-# Modify to your needs:
-statefiledir='@@PLUGSTATE@@'
 # You may not modify anything below this line
 
 import os, sys, string, pickle
 from math import log
 plugin_version="2.1"
+statefiledir=os.environ['MUNIN_PLUGSTATE']
 
 def verboselog(s):
     global plugin_name
